fix: institutionId parameter and gap on jobs list

--- a/src/pages/Group/GroupTabs/GroupJobs/GroupJobs.less
+++ b/src/pages/Group/GroupTabs/GroupJobs/GroupJobs.less
@@ -3,7 +3,12 @@
 
 #group-page #jobs.group-tab {
     #jobs-list.tab-list {
+        display: flex;
+        flex-direction: column;
+        gap: .5rem;
+
         .job-item {
+            width: 100%;
             border-radius: @border-radius;
             background-color: @card-item-color;
 
